# SPECTER_AI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MILESTONE_3_VERIFICATION.md  Makefile  NextSession.md  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4fb4b62191e5_add_knowledge_graph_tables.py  5a5919956ad5_scan_execution_framework.py  a1b2c3d4e5f6_add_workflow_scheduler_tables.py  b7c3d4e5f6a1_milestone4_tool_results_assets_findings.py  d5e6f7a8b9c0_milestone5_evidence.py  e6f7a8b9c0d1_milestone5_reports.py  e805ba666950_identity_and_platform_foundation.py
backend/app/: main.py
backend/app/api/v1/: deps.py  error_handlers.py  health.py  router.py  schemas.py
backend/app/application/: __init__.py  asset_service.py  auth_service.py  authorization_service.py  correlation_service.py  evidence_service.py  finding_service.py  graph_service.py  organization_service.py  project_service.py  report_service.py  scan_service.py  schedule_service.py  scope_guard_service.py  target_service.py  workflow_executor.py  workflow_service.py
backend/app/core/: config.py  logging.py
backend/app/domain/: __init__.py  entities.py  exceptions.py  repositories.py  target_validation.py  value_objects.py
backend/app/graph/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/celery_app/: app.py  (+2 more)
backend/app/plugins/: __init__.py  base.py  builtin.py  echo_plugin.py  manager.py  nmap_plugin.py  normalizer.py  normalizer_registry.py  ping_plugin.py  registry.py
backend/tests/: conftest.py  fakes.py  test_health.py
backend/tests/api/: test_auth_api.py  test_permissions_api.py  test_scans_api.py  test_scope_guard_api.py
backend/tests/integration/: conftest.py  test_graph_integration.py  test_repositories.py
backend/tests/unit/: test_asset_service.py  test_auth_service.py  test_builtin_plugins.py  test_correlation_service.py  test_execution_engine.py  test_finding_service.py  test_graph_service.py  test_normalizers.py  test_organization_service.py  test_plugin_registry_and_manager.py  test_project_service.py  test_report_service.py  test_scan_service.py  test_schedule_service.py  test_scope_guard_service.py  test_target_service.py  test_workflow_executor.py  test_workflow_service.py
(+84 files in other folders)
