[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specter-ai-backend"
version = "0.1.0"
description = "SPECTER_AI — Autonomous Offensive Security Platform (backend)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "celery[redis]==5.4.0",
    "redis==5.0.8",
    "structlog==24.4.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "black==24.8.0",
    "mypy==1.11.2",
    "types-redis==4.6.0.20240903",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- Ruff ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
# E203: conflicts with Black's slice formatting.
# B008: FastAPI's `Depends()`/`Query()` in argument defaults is the
# idiomatic DI pattern, not a real "mutable default" hazard.
ignore = ["E203", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- Black ---------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# --- Mypy ---------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.infrastructure.celery_app.*"
# Celery's `@task` decorator isn't typed upstream (untyped-decorator
# warning under --strict); this is a known stub gap, not a real issue
# in our code, so we relax just this one strict sub-check here.
disallow_untyped_decorators = false

# --- Pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]